--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>BoleteraDSM</title>
-  <link rel="icon" href="icono.png" type="assets/image/icono.png">
+  <link rel="icon" href="assets/image/icono.png" type="image/png">
   <meta name="description" content="Venta oficial de boletos para el evento exclusivo 'Desfragmentado, El MC legendario', DSM Familia - Sello discográfico especializado en rap, hip hop y talento urbano de Jalisco. Descubre artistas emergentes y eventos musicales.">
   <meta name="keywords" content="eventos musicales, boletos VIP, exclusivo, concierto, Desfragmentado, DSM Familia, sello musical, hip hop Jalisco, rap mexicano, artistas urbanos">
   <meta name="author" content="Francisco D. Zamora">
